tests/negative/Internal/MultiWrongType.juvix
module MultiWrongType;

type A :=
  | a : A;

type B :=
  | b : B;

f : A := b;

g : B := a;
